--- a/src/style.css
+++ b/src/style.css
@@ -142,7 +142,7 @@ table i:hover {
   justify-content: center;
   border-radius: 4px;
   margin: 5px auto;
-  font-weight: bold;
+  font-weight: 600;
   color: rgb(255, 255, 255);
   font-size: 0.7rem;
   -webkit-box-shadow: -1px 7px 18px -1px rgba(109, 109, 109, 0.44);
